--- a/index.html
+++ b/index.html
@@ -183,6 +183,49 @@
             </div>
 
         </section>
+             <!-- end of number............................................................................ -->
+        <section class="container-fluid container-xxl questions">
+            <div class="row px-2 ">
+                <div class="col-12 col-lg-5 ">
+                    <h4 class="display-5">Already have some questions?</h4>
+                    <p class="my-4">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque repellat corrupti nemo labore exercitationem nobis aut iusto laudantium illo libero?</p>
+                    <div class="col-5 col-md-3 col-lg-5 button">
+                        <span></span>
+                        <a href="#">let's connect</a>
+                    </div>
+
+                </div>
+
+                <div class="col-12 col-lg-7 my-4">
+                    <ul class="col-12  h-100">
+                        <li class=" d-flex justify-content-between align-items-center flex-wrap m-2 px-4 py-3">What services does Float Studio offer?
+                            <span class="d-none d-lg-flex">∨</span>
+                            <div class="mt-4">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, ad id? Officia, quidem minus, ad cum sit sed architecto suscipit consectetur illo quisquam porro quasi.</p>
+                            </div>
+                        </li>
+                        <li class=" d-flex justify-content-between align-items-center flex-wrap m-2 px-4 py-3">How does the design process work at Float Studio?
+                            <span class="d-none d-lg-flex">∨</span>
+                            <div class="mt-4">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, ad id? Officia, quidem minus, ad cum sit sed architecto suscipit consectetur illo quisquam porro quasi.</p>
+                            </div>
+                        </li> 
+                        <li class=" d-flex justify-content-between align-items-center flex-wrap m-2 px-4 py-3">Can Float Studio handle projects of all sizes?
+                            <span class="d-none d-lg-flex">∨</span>
+                            <div class="mt-4">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, ad id? Officia, quidem minus, ad cum sit sed architecto suscipit consectetur illo quisquam porro quasi.</p>
+                            </div>
+                        </li>
+                        <li class=" d-flex justify-content-between align-items-center flex-wrap m-2 px-4 py-3">What sets Float Studio apart from other design agencies?
+                            <span class="d-none d-lg-flex">∨</span>
+                            <div class="mt-4">
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, ad id? Officia, quidem minus, ad cum sit sed architecto suscipit consectetur illo quisquam porro quasi.</p>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
 
     </main>
 
